# onnx-mlir

./: .gitmodules  compile_libprotobuf_mutator.sh  compile_mlir.sh  compile_onnxmlir.sh
src/: CMakeLists.txt  InitOMPasses.hpp  basic-fuzzer.cpp  onnx-mlir.cpp  protobuf-fuzzer.cpp
src/Builder/: FrontendDialectTransformer.hpp
src/Compiler/: CompilerUtils.cpp  CompilerUtils.hpp
src/Pass/: Passes.hpp
src/Transform/ONNX/: CMakeLists.txt  RandomMutate.cpp  ToyMutators.cpp  ToyMutators.h  ToyPass.cpp
